--- a/index.html
+++ b/index.html
@@ -5,29 +5,71 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shuchona</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="images/icon.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
     <!--------Introdcution-------->
+
     <section class="top-banner" class="flexible-container">
         <div class="half-width">
             <h1>Welocome to</h1>
             <h1><span class="orange-color">Shuchona's</span> Artwork!</h1>
             <h3>Student | Artist</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora cum ullam, sint veniam mollitia quae voluptatem vel. Vero quidem iste quaerat esse illo. Impedit cupiditate praesentium libero illum rem provident tempora aperiam expedita natus eius, officiis rerum quod. Nostrum, ipsa!
-            </p>
+            </p> <br>
             <a class="link-button" href="https://www.facebook.com/profile.php?id=100008487423634" target="_blank">Let's Talk</a>
         </div>
 
         <div class="half-width">
             <img src="images/shuchona-profile-pic.png" alt="">
         </div>
+    </section> <br>
+
+    <!----------About---------->
+
+    <section class="dream-big flexible-container">
+        <div class="half-width">
+            <img src="images/shuchona-artistic-pic.png" alt="">
+        </div>
+
+        <div class="half-width">
+            <h1>Dream Big</h1>
+            <h2>Become an Artist</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sequi aperiam possimus error atque animi, tempora maxime temporibus sint nihil in fugiat debitis minus quisquam eius ipsa a ipsam voluptatibus accusamus!</p> <br>
+            <a class="link-button" href="https://www.instagram.com/_.coyote_/" target="_blank">DOWNLOAD RESUME</a>
+        </div>
     </section>
+
+    <!--------Experiences---------->
+
+    <section class="experience-area">
+        <h1>Experiences</h1>
+
+        <div class="flexible-container">
+            <div id="student-item" class="experience-item">
+                <h2>Student</h2>
+                <h3><span class="orange-color" style="color: orange;">2020 - Present | Faculty of Arts</span></h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis ipsum possimus minus. Temporibus ut quaerat quia eum deleniti neque asperiores minus laboriosam. Maiores, dolor enim deleniti exercitationem veritatis a facilis odit quos earum, voluptates quae, voluptatibus aliquam dolorum eaque beatae iure deserunt voluptate ullam voluptas. Tenetur, illum! Recusandae dignissimos ratione laudantium saepe deserunt delectus, soluta, atque, excepturi eligendi consectetur in.</p>
+            </div>
+    
+            <div id="artist-item" class="experience-item">
+                <h2>Artist</h2>
+                <h3><span class="orange-color" style="color: orange;">2020 | আলেখ্যদর্শন</span></h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis ipsum possimus minus. Temporibus ut quaerat quia eum deleniti neque asperiores minus laboriosam. Maiores, dolor enim deleniti exercitationem veritatis a facilis odit quos earum, voluptates quae, voluptatibus aliquam dolorum eaque beatae iure deserunt voluptate ullam voluptas. Tenetur, illum! Recusandae dignissimos ratione laudantium saepe deserunt delectus, soluta, atque, excepturi eligendi consectetur in.</p>
+            </div>
+        </div>
+    </section>
+
+    <!----------Footer---------->
+    <footer>
+        <p>© Jamiul Islam 2021</p>
+    </footer>
 </body>
 </html>
